--- a/TPA_DGMK/CommandLine/App.config
+++ b/TPA_DGMK/CommandLine/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -10,8 +11,8 @@
   <appSettings>
     <add key="traceLevel" value="Information" />
     <add key="logSourceName" value="AppLog" />
-    <add key="loggingComponent" value="DatabaseLogger" />
-    <add key="serializingComponent" value="XMLSerializer" />
+    <add key="loggingComponent" value="FileLogger" />
+    <add key="serializingComponent" value="DatabaseSerializer" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -74,8 +75,8 @@
       </parameter>
     </appender>
   </log4net>
-  
- 
+
+
   <system.diagnostics>
     <sources>
       <source name="AppLog" switchName="AppSourceSwitch" switchType="System.Diagnostics.SourceSwitch">
