--- a/TPA_DGMK/Wpf/App.config
+++ b/TPA_DGMK/Wpf/App.config
@@ -11,7 +11,7 @@
     <add key="traceLevel" value="Information" />
     <add key="logSourceName" value="AppLog" />
     <add key="loggingComponent" value="DatabaseLogger" />
-    <add key="serializingComponent" value="XMLSerializer" />
+    <add key="serializingComponent" value="DatabaseSerializer" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
